# spline-viewer

./: .gitignore  Cargo.toml  README.md
examples/: bspline-example-2d.json  bspline-example-3d.json  saddle-surface-interpolation.json  saddle-surface.json
programming/: Cargo.toml
programming/pa1/: Cargo.toml  README.md
programming/pa1/src/: bezier.rs  camera2d.rs  display_curve.rs  imgui_support.rs  main.rs  point.rs  polyline.rs
programming/src/: arcball_camera.rs  bezier.rs  bspline.rs  bspline_basis.rs  bspline_surf.rs  camera2d.rs  display_curve.rs  display_curve3d.rs  display_surf.rs  display_surf_interp.rs  main.rs  point.rs  polyline.rs
src/: bezier.rs  bspline.rs  bspline_basis.rs  bspline_surf.rs  camera2d.rs  display_curve.rs  display_curve3d.rs  display_surf.rs  display_surf_interp.rs  imgui_support.rs  main.rs  point.rs  polyline.rs
