[package]
name = "spline-viewer"
version = "0.1.0"
authors = ["Will Usher <willusher.life@gmail.com>"]

[dependencies]
glium = "0.16.0"
imgui = "0.0.13"
imgui-glium-renderer = "0.0.13"
imgui-sys = "0.0.13"
cgmath = "0.14.0"
docopt = "0.7.0"
serde = "1.0.2"
serde_json = "1.0.1"
num-traits = "0.1.37"
rulinalg = "0.4.2"
arcball = "0.2.0"

