[package]
name = "spline-viewer"
version = "0.1.0"
authors = ["Will Usher <willusher.life@gmail.com>"]

[dependencies]
glium = "0.29.1"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-sys = "0.7.0"
cgmath = "0.17.0"
docopt = "1.1.1"
serde = "1.0.126"
serde_json = "1.0.64"
num-traits = "0.2.14"
rulinalg = "0.4.2"
arcball = "1.0.0"

